@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: self.n,v 1.2 2008/10/17 10:22:25 dkf Exp $
+'\" RCS: @(#) $Id: self.n,v 1.3 2009/03/24 10:46:04 dkf Exp $
 '\"
 .so man.macros
 .TH self n 0.1 TclOO "TclOO Commands"
@@ -39,9 +39,10 @@ destructors respectively).
 .TP
 \fBself class\fR
 .
-This returns the name of the class or object that the current method was
-defined within. Note that this will change as the chain of method
-implementations is traversed with \fBnext\fR.
+This returns the name of the class that the current method was defined within.
+Note that this will change as the chain of method implementations is traversed
+with \fBnext\fR, and that if the method was defined on an object then this
+will fail.
 .TP
 \fBself filter\fR
 .
